<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.version>1.0-beta-1</project.version>

    </properties>
    <groupId>io.bdrc.audit</groupId>
    <artifactId>audit-tool</artifactId>
    <packaging>pom</packaging>
    <version>1.0-beta</version>
    <modules>
        <!-- groupId elements of children -->
        <module>IAudit</module>
        <module>test-lib</module>
        <module>audit-test-shell</module>
    </modules>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.0.0-M1</version>
                </plugin>
                <!-- To define the plugin version in your parent POM -->

                <plugin>
                    <groupId>com.github.akman</groupId>
                    <artifactId>jpackage-maven-plugin</artifactId>
                    <version>0.1.3</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- jimk: this is stupid if I have to put this here to get
                a submodule's test to compile -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-dependency-plugin</artifactId>-->
            <!--                <version>3.2.0</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>copy-artifact</id>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>copy</goal>-->
            <!--                        </goals>-->
            <!--                        <configuration>-->
            <!--                            <artifactItems>-->
            <!--                                <artifactItem>-->
            <!--                                    <groupId>${project.groupId}</groupId>-->
            <!--                                    <artifactId>${project.artifactId}</artifactId>-->
            <!--                                    <version>${project.version}</version>-->
            <!--                                    <type>${project.packaging}</type>-->
            <!--                                </artifactItem>-->
            <!--                                <artifactItem>-->
            <!--                                    <groupId>${project.groupId}</groupId>-->
            <!--                                    <artifactId>IAudit</artifactId>-->
            <!--                                    <version>${project.version}</version>-->
            <!--                                    <type>${project.packaging}</type>-->
            <!--                                </artifactItem>-->
            <!--                                <artifactItem>-->
            <!--                                    <groupId>${project.groupId}</groupId>-->
            <!--                                    <artifactId>test-lib</artifactId>-->
            <!--                                    <version>${project.version}</version>-->
            <!--                                    <type>${project.packaging}</type>-->
            <!--                                </artifactItem>-->
            <!--                                <artifactItem>-->
            <!--                                    <groupId>${project.groupId}</groupId>-->
            <!--                                    <artifactId>shell</artifactId>-->
            <!--                                    <version>${project.version}</version>-->
            <!--                                    <type>${project.packaging}</type>-->
            <!--                                </artifactItem>-->
            <!--                            </artifactItems>-->
            <!--                            <outputDirectory>target/output</outputDirectory>-->
            <!--                        </configuration>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0-M1</version>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.36</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.17.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.17.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.1</version>
        </dependency>
        <!-- used in audit-shell and test-lib -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.1-jre</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>
